transition bg overlaping bottom menu on mobile fix

--- a/style.scss
+++ b/style.scss
@@ -54,8 +54,10 @@ img,
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
   &.is-active {
-    transition: 300ms linear;
+    opacity: 1;
+    transition: transform 300ms linear;
     transform: translateY(0%);
     path {
       stroke: var(--accent-color) !important;
